Agregando cadena de coneccion y contexto

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "ConnectionStrings": {
+        "Default": "Data Source=SQL5056.site4now.net;Initial Catalog=db_a13b77_serviciostesting;User Id=db_a13b77_serviciostesting_admin;Password=Leo0010019"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
     }
-  }
 }
